syntax = "proto3";

enum OpCode {
  UNKNOWN = 0;
  AUTH_REQUEST = 1;
  AUTH_ACK = 2;
  MSG_REQUEST = 3;
  MSG_ACK = 33;
  QUERY_USER_GROUP_REQUEST = 4;
  QUERY_USER_GROUP_ACK = 5;
}
